--- a/return statements/return.html
+++ b/return statements/return.html
@@ -7,6 +7,14 @@
     <title>Return Statments</title>
 </head>
 <body>
-    <script src="return.js"></script>
+    <main>
+    <button onclick="bake">Try</button>
+
+    <script src="return.js">
+        function bake(){
+            prompt ("Enter any bake level of your choice:")
+        }
+    </script>
+    </main>
 </body>
 </html>
